--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "cam-blue" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Cambridge University Powerlifting Club"
+title                    : "Cambridge University "
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Powerlifting Club"
 name                     : "Bilal Chughtai"
 description              : "The strongest society in Cambridge"
 url                      : https://cuplc.co.uk # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
