Add Oğuzhan instagram link

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -46,7 +46,8 @@ Male Welfare Officer:
   - name: "Oğuzhan Yüksel"
     image_path: assets/images/headshots/Oğuzhan.png
     email: aoy21@cam.ac.uk
-    
+    instagram: "https://www.instagram.com/oguzhan021/"
+
 Female & Non-Binary Welfare Officer:
   - name: "Emma Onah"
     email: eo364@cam.ac.uk
