Add yaron's photo as author

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -62,3 +62,5 @@ Andrew Hodgeson:
 
 Yaron Bernstein:
   name        : "Yaron Bernstein"
+  bio         : "CUPLC Dad 2022-23"
+  avatar      : "/assets/images/headshots/yaron.jpeg"
