--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Committee"
     url: /committee/
+  - title: "Calendar"
+    url: /calendar/
   - title: "Competitions"
     url: /competitions/
   - title: "Records"
