--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -64,3 +64,8 @@ Yaron Bernstein:
   name        : "Yaron Bernstein"
   bio         : "CUPLC Dad 2022-23"
   avatar      : "/assets/images/headshots/yaron.jpeg"
+
+Amy Williams:
+  name        : "Amy Williams"
+  bio         : "Women's Captain 2022-2023 <br/> Treasurer 2021-2022 <br/> Welfare Officer 2020-2021"
+  avatar      : "/assets/images/headshots/amy.jpg"
