--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -30,7 +30,7 @@ Social Media Officer:
   - name:
 
 Male Welfare Officer:
-  - name: "Etinos Ojike Ederaro"
+  - name: "Etinosa Ojike Ederaro"
 
 Female & Non-Binary Welfare Officer:
   - name: "Liz Stevenson"
