--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+  - title: "Membership"
+    url: /membership/
   - title: "Committee"
     url: /committee/
   - title: "Calendar"
@@ -10,7 +12,5 @@ main:
     url: /records/
   - title: "Resources"
     url: /resources/
-  - title: "Blog"
-    url: /blog/
   - title: 'About'
     url: /about/
