--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -1,7 +1,8 @@
 President:
   - name: "Shubang Nagalotimath"
     email: sn587@cam.ac.uk
-    image_path: assets/images/headshots/shubang.jpg
+    image_path: assets/images/headshots/shubang_24.jpeg
+    instagram: "https://www.instagram.com/Shubang.Naga/"
 
 Men's Captain:
   - name: "Santosh Guru"
