--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -12,6 +12,7 @@ Men's Captain:
 
 Women's Captain:
   - name: "Ada Adamczyk"
+    image_path: assets/images/headshots/ada.jpeg
     email: ama203@cam.ac.uk
 
 Secretary:
