--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -26,7 +26,9 @@ Webmaster:
     image_path: assets/images/headshots/sophie.png
 
 Stash Officer:
-  - name:
+  - name: "Liz Stevenson"
+    image_path: assets/images/headshots/liz.jpeg
+    email: efs29@cam.ac.uk
 
 Social Media Officer:
   - name:
