alek's headshot, add yuvi social media officer

--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -20,6 +20,7 @@ Secretary:
 
 Treasurer:
   - name: "Aleksandar Radic"
+    image_path: assets/images/headshots/alek.jpeg
 
 Webmaster:
   - name: "Sophie May"
@@ -31,7 +32,7 @@ Stash Officer and Female & Non-Binary Welfare Officer:
     email: efs29@cam.ac.uk
 
 Social Media Officer:
-  - name:
+  - name: Yuvraj Agarwal
 
 Male Welfare Officer:
   - name: "Etinosa Ojike Ederaro"
