--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -40,6 +40,7 @@ Male Welfare Officer:
 
 Social Secretary:
   - name: "Sneha Kumar"
+    image_path: assets/images/headshots/sneha.jpeg
 
 Health and Safety:
   - name: "Gratsiela Kostova"
