add brandon as an author

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -69,3 +69,8 @@ Amy Williams:
   name        : "Amy Williams"
   bio         : "Women's Captain 2022-2023 <br/> Treasurer 2021-2022 <br/> Welfare Officer 2020-2021"
   avatar      : "/assets/images/headshots/amy.jpg"
+
+Brandon Teh:
+  name        : "Brandon Teh"
+  bio         : "Men's captain 2023-24"
+  avatar      : "/assets/images/headshots/brandon.jpg"
