add rachel as author, add strapline

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -74,3 +74,8 @@ Brandon Teh:
   name        : "Brandon Teh"
   bio         : "Men's captain 2023-24"
   avatar      : "/assets/images/headshots/brandon.jpg"
+
+Rachel Knight:
+  name        : "Rachel Knight"
+  bio         : "Women's captain 2023-24"
+  avatar      : "/assets/images/headshots/rachel.jpg"
