--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -79,3 +79,8 @@ Rachel Knight:
   name        : "Rachel Knight"
   bio         : "Women's captain 2023-24"
   avatar      : "/assets/images/headshots/rachel.jpg"
+
+Masters Athlete:
+  name        : "Masters Athlete"
+  bio         : "90% ibuprofen 10% caffeine"
+
