--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -26,6 +26,7 @@ Stash Officer:
 
 Social Media Secretary:
   - name: "Rozana Mazlumian"
+    image_path: assets/images/headshots/roz.jpg
 
 Women’s and NB Welfare:
   - name: "Liz Stevenson"
