--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -40,7 +40,7 @@ Male Welfare Officer:
     instagram: "https://www.instagram.com/nikotinz"
 
 Social Secretary:
-  - name: "Felipe Western"
+  - name: "Felipe Westen"
     image_path: assets/images/headshots/filipe.jpg
 
 Assistant Social Secretary:
