--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -88,3 +88,8 @@ Sophie May:
   name        : "Sophie May"
   bio         : "Webmaster"
   avatar      : "/assets/images/headshots/sophie.jpg"
+
+Issy Dowling:
+  name        : "Issy Dowling"
+  bio         : "WUCS 2025"
+  avatar      : "/assets/images/headshots/issy.jpg"
