--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -93,3 +93,8 @@ Issy Dowling:
   name        : "Issy Dowling"
   bio         : "WUCS 2025"
   avatar      : "/assets/images/headshots/issy.jpg"
+
+Dave White:
+  name        : "Dave White"
+  bio         : "M1 74kg"
+  avatar      : "/assets/images/headshots/dave_white.png"
